--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   build:
-    name: Hello world action
+    name: Hello world action for env
     runs-on: ubuntu-latest
     steps:
-      - run: echo $MY_SECRET_ENV
+      - run: echo ${{ env.MY_SECRET_ENV }} 
