--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -6,4 +6,16 @@ jobs:
     name: Hello world action for env
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ env.MY_SECRET_ENV }} 
+      - run: echo "$MY_SECRET_ENV"
+  weekday_job:
+    runs-on: ubuntu-latest
+    env:
+      DAY_OF_WEEK: Mon
+    steps:
+      - name: "Hello world when it's Monday"
+        if: ${{ env.DAY_OF_WEEK == 'Mon' }}
+        run: echo "Hello $FIRST_NAME $middle_name $Last_Name, today is Monday!"
+        env:
+          FIRST_NAME: Mona
+          middle_name: The
+          Last_Name: Octocat
