--- a/.github/workflows/BuildMachine.yml
+++ b/.github/workflows/BuildMachine.yml
@@ -13,8 +13,13 @@ jobs:
 
     steps:
       - name: Install dependencies
-        run: echo "BuildMachine"
-
+        env:
+          slnPath: "${env.WORKSPACE}\\RelayHealth.EncryptionDecryption.sln"
+          projectFile: "${env.WORKSPACE}\\RelayHealth.EncryptionDecryption\\RelayHealth.EncryptionDecryption.csproj"
+          nupkgFile: "${env.WORKSPACE}\\RelayHealth.EncryptionDecryption.*.*.*.*.nupkg"
+          nupkgSymbolsFile: "${env.WORKSPACE}\\RelayHealth.EncryptionDecryption.*.*.*.*.symbols.nupkg"
+        run: 
+          echo "$slnPath \n $projectFile \n $nupkgFile \n $nupkgSymbolsFile"
 
   Setup-Workspace:
     name: Setup Workspace
