--- a/.github/workflows/BuildMachine.yml
+++ b/.github/workflows/BuildMachine.yml
@@ -14,12 +14,12 @@ jobs:
     steps:
       - name: Install dependencies
         env:
-          slnPath: "$env.WORKSPACE\\RelayHealth.EncryptionDecryption.sln"
-          projectFile: "$env.WORKSPACE\\RelayHealth.EncryptionDecryption\\RelayHealth.EncryptionDecryption.csproj"
-          nupkgFile: "$env.WORKSPACE\\RelayHealth.EncryptionDecryption.*.*.*.*.nupkg"
-          nupkgSymbolsFile: "$env.WORKSPACE\\RelayHealth.EncryptionDecryption.*.*.*.*.symbols.nupkg"
+          slnPath: "$WORKSPACE\\RelayHealth.EncryptionDecryption.sln"
+          projectFile: "$WORKSPACE\\RelayHealth.EncryptionDecryption\\RelayHealth.EncryptionDecryption.csproj"
+          nupkgFile: "$WORKSPACE\\RelayHealth.EncryptionDecryption.*.*.*.*.nupkg"
+          nupkgSymbolsFile: "$WORKSPACE\\RelayHealth.EncryptionDecryption.*.*.*.*.symbols.nupkg"
         run: 
-          echo "$slnPath \n $projectFile \n $nupkgFile \n $nupkgSymbolsFile"
+          echo "$slnPath\n$projectFile\n$nupkgFile\n$nupkgSymbolsFile"
 
   Setup-Workspace:
     name: Setup Workspace
