--- a/.github/workflows/BuildMachine.yml
+++ b/.github/workflows/BuildMachine.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Install dependencies
         env:
-          WORKSPACE: $WORKSPACE
+          WORKSPACE: "${{WORKSPACE}}" 
           slnPath: "${{WORKSPACE}}\\RelayHealth.EncryptionDecryption.sln"
           projectFile: "${{WORKSPACE}}\\RelayHealth.EncryptionDecryption\\RelayHealth.EncryptionDecryption.csproj"
           nupkgFile: "${{WORKSPACE}}\\RelayHealth.EncryptionDecryption.*.*.*.*.nupkg"
