--- a/.github/workflows/BuildMachine.yml
+++ b/.github/workflows/BuildMachine.yml
@@ -15,12 +15,9 @@ jobs:
       - name: Install dependencies
         env:
           WORKSPACE: "${{WORKSPACE}}" 
-          slnPath: "${{WORKSPACE}}\\RelayHealth.EncryptionDecryption.sln"
-          projectFile: "${{WORKSPACE}}\\RelayHealth.EncryptionDecryption\\RelayHealth.EncryptionDecryption.csproj"
-          nupkgFile: "${{WORKSPACE}}\\RelayHealth.EncryptionDecryption.*.*.*.*.nupkg"
-          nupkgSymbolsFile: "${{WORKSPACE}}\\RelayHealth.EncryptionDecryption.*.*.*.*.symbols.nupkg"
+
         run: 
-          echo "$slnPath\n$projectFile\n$nupkgFile\n$nupkgSymbolsFile"
+          echo "$WORKSPACE"
 
   Setup-Workspace:
     name: Setup Workspace
