--- a/.github/workflows/BuildMachine.yml
+++ b/.github/workflows/BuildMachine.yml
@@ -14,8 +14,7 @@ jobs:
     steps:
       - name: Install dependencies
         env:
-          WORKSPACE: "${{WORKSPACE}}" 
-
+          WORKSPACE: "$WORKSPACE" 
         run: 
           echo "$WORKSPACE"
 
