--- a/.github/workflows/BuildMachine.yml
+++ b/.github/workflows/BuildMachine.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Install dependencies
         env:
-          WORKSPACE: "$WORKSPACE" 
+          WORKSPACE: ${{ secrets.WORKSPACE }}
         run: 
           echo "$WORKSPACE"
 
