--- a/.github/workflows/BuildMachine.yml
+++ b/.github/workflows/BuildMachine.yml
@@ -87,5 +87,5 @@ jobs:
 
     steps:
       - run: echo "Push-NuGet-Package"
-             dotnet nuget push ./<project>/out/*.nupkg --skip-duplicate --no-symbols true
+       #      dotnet nuget push ./<project>/out/*.nupkg --skip-duplicate --no-symbols true
 
