--- a/.github/workflows/test-secrets.yml
+++ b/.github/workflows/test-secrets.yml
@@ -14,12 +14,12 @@ jobs:
       projectFile: "RelayHealth.EncryptionDecryption/RelayHealth.EncryptionDecryption.csproj"
       nupkgFile: "RelayHealth.EncryptionDecryption.*.*.*.*.nupkg"
       nupkgSymbolsFile: "RelayHealth.EncryptionDecryption.*.*.*.*.symbols.nupkg"
-      id:  id
-      version: version
-      title: title
-      authors: authors
-      owners: owners
-      description: description
+      id:  id_var
+      version: version_var
+      title: title_var
+      authors: authors_var
+      owners: owners_var
+      description: description_var
       
     
     runs-on: windows-latest
@@ -27,5 +27,17 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
+    - name: set env variables
+      run: $env:id = $id
+           $env:version = $version
+           $env:title = $title
+           $env:authors = $authors
+           $env:owners = $owners
+           $env:description = $description
     - name: Check env variables
-      run: SET  
+      run: $env:id 
+           $env:version 
+           $env:title
+           $env:authors
+           $env:owners
+           $env:description
