--- a/.github/workflows/test-secrets.yml
+++ b/.github/workflows/test-secrets.yml
@@ -28,16 +28,16 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: set env variables
-      run: $env:id = $id
-           $env:version = $version
-           $env:title = $title
-           $env:authors = $authors
-           $env:owners = $owners
+      run: $env:id = $id           &&
+           $env:version = $version &&
+           $env:title = $title     &&
+           $env:authors = $authors &&
+           $env:owners = $owners   &&
            $env:description = $description
     - name: Check env variables
-      run: $env:id 
-           $env:version 
-           $env:title
-           $env:authors
-           $env:owners
-           $env:description
+      run: $env:id  &&
+           $env:version  &&
+           $env:title    &&
+           $env:authors  &&
+           $env:owners   &&
+           $env:description 
