--- a/.github/workflows/test-secrets.yml
+++ b/.github/workflows/test-secrets.yml
@@ -28,16 +28,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: set env variables
-      run: $env:id = $id           &&
-           $env:version = $version &&
-           $env:title = $title     &&
-           $env:authors = $authors &&
-           $env:owners = $owners   &&
-           $env:description = $description
+      run: $env:id = $id 
     - name: Check env variables
-      run: $env:id  &&
-           $env:version  &&
-           $env:title    &&
-           $env:authors  &&
-           $env:owners   &&
-           $env:description 
+      run: $env:id 
