--- a/.github/workflows/test-secrets.yml
+++ b/.github/workflows/test-secrets.yml
@@ -27,7 +27,20 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-    - name: set env variables
+    - name: set env id
       run: $env:id = $id 
+    - name: set env version
+      run: $env:version = $version 
+    - name: set env title
+      run: $env:title = $title 
+    - name: set env authors
+      run: $env:authors = $authors 
+    - name: set env owners
+      run: $env:owners = $owners 
+    - name: set env description
+      run: $env:description = $description 
+      
     - name: Check env variables
+      run: $env:description 
+
       run: $env:id 
